<resources>
    <string name="app_name">Joke</string>
    <string name="btnNewJoke">New Joke</string>
    <string name="btnNewJokeCategory">Category</string>
    <string name="btnAbout">About</string>
    <string name="btnExit">Exit</string>
    <string name="btnHome">Return</string>
    <string name="text_card"> </string>
    <string name="nameAuthor">Liliane Castro</string>
    <string name="email">E-mail: lcs2@icomp.ufam.edu.br</string>
    <string name="description">Aplicativo para requisição de piadas na API chucknorris.io . Foram utilizadas as bibliotecas do Retrofit e Picasso para a requisição do web service</string>



</resources>
