<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imgAbout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAbout"
            android:layout_marginTop="10dp"
            android:text="@string/nameAuthor"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAuthor"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmail"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold|italic"

            />


    </LinearLayout>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorButtom"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        android:text="@string/btnHome" />



</RelativeLayout>