<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue50"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <ImageView
                android:id="@+id/img_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:src="@mipmap/ic_main" />


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btnGetJoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorButtom"
                android:text="@string/btnNewJoke"
                android:textSize="16dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorButtom"
                android:text="@string/btnAbout"
                android:textSize="16dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorButtom"
                android:text="@string/btnExit"
                android:textSize="16dp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>