<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/idCardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

                <TextView
                    android:id="@+id/txtJoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_card"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/ftImageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text=" "
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNewJoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorButtom"
                android:text="@string/btnNewJoke"
                android:textSize="16dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorButtom"
                android:text="@string/btnHome"
                android:textSize="16dp"
                android:textStyle="bold|italic" />



        </LinearLayout>


    </LinearLayout>
</RelativeLayout>